--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,18 @@
 <h1>To-Do:</h1>
 
-<p>Here's what we gotta do today:</p>
+<p>Select a list:</p>
 
 <ul>
-  <% @tasks.each() do |task| %>
-    <li> <%= task.description() %></li>
+  <% @lists.each() do |list| %>
+    <li> <%= list.name() %></li>
   <% end %>
 </ul>
 
-<p>What else do we gotta do?</p>
+<p>Add a list</p>
 
-<form action="/tasks" method="post">
-  <label for="description">Describe that task</label>
-  <input id="description" name="description" type="text">
+<form action="/lists" method="post">
+  <label for="name">Name your list</label>
+  <input id="name" name="name" type="text">
 
   <button type="submit">Add it!!</button>
 </form>
