--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 
 <ul>
   <% @lists.each() do |list| %>
-    <li> <%= list.name() %></li>
+    <li> <a href="/lists/<%= list.id() %>"><%= list.name() %></a></li>
   <% end %>
 </ul>
 
