--- a/views/index.erb
+++ b/views/index.erb
@@ -14,13 +14,61 @@
   <label for="name">Name your list</label>
   <input id="name" name="name" type="text">
 
-  <button type="submit">Add it!!</button>
+  <button type="submit" class="btn-default">Add it!!</button>
 </form>
 
 <p>All of your tasks:</p>
 
 <ul>
   <% @tasks.not_done().each() do |task| %>
-    <li> <%= task.description %> <a href="/tasks/<% task.id() %>/edit">Update this task's description</a> </li>
+    <li> <%= task.description %>: <%= task.due_date() %><br>
+      <a href="/tasks/<%= task.id() %>/edit">Update this task's description</a>
+      <ul class="style-unstyled">
+        <li>
+          <form action='/tasks/<%= task.id() %>' method='post'>
+          <input type="hidden" name='_method' value='delete'>
+          <button type='submit' class="btn-default">Task Complete</button>
+        </form>
+        </li>
+      </ul>
+    </li>
+
     <% end %>
 </ul>
+
+<p>Add a task</p>
+
+  <form action="/tasks" method="post">
+    <label for="description">Describe Task:</label>
+    <input id="description" name="description" type="text">
+
+    <label for="due_date">Give it a due date:</label>
+    <input id="due_date" name="due_date" type="text">
+
+    <div class="row">
+      <div class="col-xs-2">
+          <% if @lists.any?() %>
+          <label for="list_id">Select a List</label>
+          <select id='list_id' name='list_id' type='text' class="form-control">
+            <% @lists.each() do |list| %>
+            <option value="<%= list.id()%>"> <%= list.name() %> </option>
+            <% end %>
+          </select>
+        </div>
+      </div>
+
+    <button type="submit" class="btn-default">Add the task!</button>
+
+    <% end %>
+  </form>
+
+
+
+
+
+
+
+<!-- <form action="/tasks" method="post">
+  <input type="hidden" name='_method' value='delete'>
+  <button type='submit' class="btn-danger">Delete All Tasks</button>
+</form> -->
