--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
   <head>
-    <title>To-do list</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <title>To-Do or Not To-Do</title>
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
   </head>
   <body>
-
+    <div class="container">
     <%= yield %>
-
+  </div>
   </body>
 </html>
