Changed format to remove list of tasks from index

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
   <button type="submit" class="btn-default">Add it!!</button>
 </form>
 
-<p>All of your tasks:</p>
+<!-- <p>All of your tasks:</p>
 
 <ul>
   <% @tasks.not_done().each() do |task| %>
@@ -34,7 +34,7 @@
     </li>
 
     <% end %>
-</ul>
+</ul> -->
 
 <p>Add a task</p>
 
